Added new CComboListCtrl class. It's CListCtrl + ability to change data in specified columns with CComboBox interface element help.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7460 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza_9.vcproj
+++ b/shareaza/Shareaza_9.vcproj
@@ -474,6 +474,10 @@
 				>
 			</File>
 			<File
+				RelativePath="ComboListCtrl.cpp"
+				>
+			</File>
+			<File
 				RelativePath="ComMenu.cpp"
 				>
 			</File>
@@ -2708,6 +2712,10 @@
 			</File>
 			<File
 				RelativePath="CollectionFile.h"
+				>
+			</File>
+			<File
+				RelativePath="ComboListCtrl.h"
 				>
 			</File>
 			<File
