Added ability to select torrent files priorities (not yet actually) in download properties dialog.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7461 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -3119,6 +3119,10 @@ BEGIN
     IDR_MEDIAFRAME          "Media Player"
     IDR_SEARCHPADFRAME      "Search"
     IDR_HELPFRAME           "Shareaza Help"
+    IDS_PRIORITY_OFF        "Off"
+    IDS_PRIORITY_LOW        "Low"
+    IDS_PRIORITY_NORMAL     "Normal"
+    IDS_PRIORITY_HIGH       "High"
 END
 
 STRINGTABLE 
@@ -4649,7 +4653,7 @@ BEGIN
     ID_HELP_CODEC           "All about codecs and video problems."
     ID_HELP_TEST            "Run the connection test."
     ID_HELP_DONATE          "You can donate to our legal fund and show your appreciation."
-	ID_HELP_FAKESHAREAZA    "Visit FakeShareaza.com to learn more."
+    ID_HELP_FAKESHAREAZA    "Visit FakeShareaza.com to learn more."
 END
 
 STRINGTABLE 
