Added resource definitions for ImageViewer plugin skin, added IDS_SKIN_LOAD and IDS_SKIN_ERROR strings.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7477 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -3123,6 +3123,8 @@ BEGIN
     IDS_PRIORITY_LOW        "Low"
     IDS_PRIORITY_NORMAL     "Normal"
     IDS_PRIORITY_HIGH       "High"
+    IDS_SKIN_ERROR          "Skin load error: %s. Element: %s"
+    IDS_SKIN_LOAD           "Loading skin: %s"
 END
 
 STRINGTABLE 
